fixing data fetching

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="#" id="upcoming">Upcoming</a>
                 </li>
                 <li>
-                    <a href="#contact" id="contact">Contact Us</a>
+                    <a href="#contact" id="now_playing" class="contact">Contact Us</a>
                 </li>
             </ul>
             <div class="soical">
